<resources>
    <string name="app_name">Binge!</string>
    <string name="popular">Popular</string>
    <string name="most_popular_movies">Check out these popular movies</string>
    <string name="error_message">No internet</string>
    <string name="top_rated">Top Rated</string>
    <string name="watch_trailer">Watch Trailer</string>
    <string name="highest_rated_movies">Look at the highest rated movies of all time</string>
    <string name="upcoming">Upcoming</string>
    <string name="stay_updated">Stay up to date with the latest and upcoming movies</string>
    <string name="binge_instructions">Press The Button To Get A Random Movie With A Snack Recommendation!</string>
</resources>